--- a/node_react_app/frontend/src/components/register.css
+++ b/node_react_app/frontend/src/components/register.css
@@ -1,14 +1,18 @@
 @media all and (min-width: 480px) {
-    .Register {
-      padding: 60px 0;
-    }
-  
-    .Register form {
-      margin: 0 auto;
-      max-width: 320px;
-    }
-
-    a {
-      color : #FFF;
-    }
+  .Register {
+    padding: 120px 0;
   }
+
+  .Register form {
+    margin: 0 auto;
+    max-width: 320px;
+  }
+
+  a {
+    color : #FFF;
+  }
+}
+
+#register {
+  background-color: white;
+}
