Changed background color. Fixed some display errors on Homepage. Added link to Login page on Register page.

--- a/node_react_app/frontend/src/components/Home.css
+++ b/node_react_app/frontend/src/components/Home.css
@@ -1,13 +1,13 @@
 .mt-5 {
     text-align:center;
     align-items: center;
-    padding: 30px;
+    padding: 2px;
 }
 
-.row-one {
+/*.row-one {
     align-items: center;
     text-align: center;
-}
+}*/
 
 
 img {
