chagnes for inventory two

--- a/node_react_app/frontend/src/components/InventoryTwo.css
+++ b/node_react_app/frontend/src/components/InventoryTwo.css
@@ -1,3 +1,12 @@
+img {
+    display: block;
+    border-radius: 8px;
+    /*align-items:center;*/
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: auto;
+}
 .container-fluid {
     padding-top: 20px;
 }
