--- a/node_react_app/frontend/src/components/login.css
+++ b/node_react_app/frontend/src/components/login.css
@@ -1,17 +1,20 @@
 @media all and (min-width: 480px) {
-  .Login {
-    padding: 120px 0;
+    .Login {
+      padding: 120px 0;
+    }
+  
+    .Login form {
+      margin: 0 auto;
+      max-width: 320px;
+    }
+    a {
+      color : #00F;
+    }
+    link {
+      text-align: center;
+    }
   }
 
-  .Login form {
-    margin: 0 auto;
-    max-width: 320px;
+  #login {
+    background-color: white;
   }
-  a {
-    color : #00F;
-  }
-}
-
-#login {
-  background-color: white;
-}
