--- a/node_react_app/frontend/src/components/Home.css
+++ b/node_react_app/frontend/src/components/Home.css
@@ -16,6 +16,7 @@ img {
     /*align-items:center;*/
     margin-left: auto;
     margin-right: auto;
+    margin-top: 100px;
     width: 50%;
     height: auto;
 }
