Made cosmetic improvements to inventory page

--- a/node_react_app/frontend/src/components/InventoryTwo.css
+++ b/node_react_app/frontend/src/components/InventoryTwo.css
@@ -13,12 +13,20 @@ table {
 }
 
 th {
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     text-align: center;
 }
 
 td {
     text-align: center;
+}
+
+#pics {
+    border-left: 2px solid black;
+}
+
+#itemName {
+    border-left: 2px solid black;
 }
 
 #dataTable tr {
