--- a/node_react_app/frontend/src/components/register.css
+++ b/node_react_app/frontend/src/components/register.css
@@ -2,18 +2,17 @@
     .Register {
       padding: 120px 0;
     }
-  
+
     .Register form {
       margin: 0 auto;
       max-width: 320px;
     }
 
     a {
-      color : #FFF;
+      color : black;
     }
   }
 
   #register {
-    background-color: white;
+    background-color: black;
   }
-
