--- a/node_react_app/frontend/src/components/login.css
+++ b/node_react_app/frontend/src/components/login.css
@@ -2,13 +2,13 @@
     .Login {
       padding: 120px 0;
     }
-  
+
     .Login form {
       margin: 0 auto;
       max-width: 320px;
     }
     a {
-      color : #00F;
+      color : black;
     }
     link {
       text-align: center;
@@ -16,5 +16,6 @@
   }
 
   #login {
-    background-color: white;
+    background-color: black;
+    
   }
