--- a/node_react_app/frontend/src/components/InventoryTwo.css
+++ b/node_react_app/frontend/src/components/InventoryTwo.css
@@ -1,22 +1,27 @@
 .InventoryTwo {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 table {
-    width: 450px;
-    height: 200px;
+    width: 900px;
+    height: 100px;
+    margin-top:90px;
+    margin-bottom:10px;
 }
 
 th {
     text-align: center;
+    border: 2px solid black;
 }
 
 td {
     text-align: center;
+    border: 2px solid black;
+    width: 300px;
 }
 
 #dataTable table {
@@ -29,7 +34,6 @@ td {
 
 #dataTable td {
     border-left: 1px solid black;
-    width: 50px;
 }
 
 #display h3 {
