--- a/node_react_app/frontend/src/components/logout.css
+++ b/node_react_app/frontend/src/components/logout.css
@@ -1,10 +1,12 @@
-.mt-5 {
+#confirm {
+    font-size: 30px;
     text-align: center;
-    align-items: center;
     padding: 2px;
+    padding-top: 200px;
 }
 
-form {
-    text-align: center;
-    align-items: center;
+#logout {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
