--- a/node_react_app/frontend/src/App.css
+++ b/node_react_app/frontend/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-    background-color: #65A594;
+    background-color: #483D8B;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
