--- a/node_react_app/frontend/src/components/InventoryTwo.css
+++ b/node_react_app/frontend/src/components/InventoryTwo.css
@@ -1,4 +1,4 @@
-].InventoryTwo {
+.InventoryTwo {
     width: 100%;
     height: 100%;
     display: flex;
@@ -19,11 +19,18 @@ picture {
     margin-bottom:10px;
 }
 
+.img {
+    height: auto;
+  max-height: 150px;
+  width: auto;
+  max-width: 150px;
+}
+
 .card {
     float: none;
     margin: 0 auto;
-    margin-top:90px;
-    margin-bottom:10px;
+    margin-top:50px;
+    margin-bottom:50px;
     width: 345px;
 }
 
